# ape

./: Cargo.toml  NOTICE  README.md
src/: lib.rs
src/canon/: error.rs  history.rs  macros.rs  mod.rs  orchestrator.rs  record.rs  tests.rs
src/docs/: 00-philosophy.md  01-ontology.md  02-kernel.md  03-axiom.md
src/kernel/: macros.rs  mod.rs
src/kernel/axiom/: action.rs  agent.rs  assertion.rs  error.rs  gateway.rs  mod.rs  resource.rs  statement.rs  tests.rs
src/kernel/entities/: action.rs  agent.rs  assertion.rs  identification.rs  mod.rs  resource.rs  statement.rs
src/kernel/value_objects/: action.rs  agent.rs  date.rs  identifier.rs  mod.rs  name.rs  occurrence.rs  resource.rs  settlement.rs  term.rs
